{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 338,
  "lineage": "a070306c-f189-fdca-4ca2-cbf855651109",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04505e74c0741db8d",
            "arn": "arn:aws:ec2:us-east-1:807649330085:instance/i-0be77a3be804d70e0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0be77a3be804d70e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "joc-key-pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a77f292cb79c72c6",
            "private_dns": "ip-10-0-1-154.ec2.internal",
            "private_ip": "10.0.1.154",
            "public_dns": "ec2-34-227-102-210.compute-1.amazonaws.com",
            "public_ip": "34.227.102.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c057571dc376a6bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02cca964d4eb7d9c9",
            "tags": {
              "KeepInstanceRunning": "false",
              "Name": "change.me-instance",
              "Owner": "change.me"
            },
            "tags_all": {
              "KeepInstanceRunning": "false",
              "Name": "change.me-instance",
              "Owner": "change.me"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0514aabe9539549b7"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.sg",
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807649330085:internet-gateway/igw-0692fc8783001c0ad",
            "id": "igw-0692fc8783001c0ad",
            "owner_id": "807649330085",
            "tags": {
              "Name": "change.me-igw",
              "Owner": "change.me"
            },
            "tags_all": {
              "Name": "change.me-igw",
              "Owner": "change.me"
            },
            "vpc_id": "vpc-0df5217a7d6826c10"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807649330085:route-table/rtb-04714f07212aff4ae",
            "id": "rtb-04714f07212aff4ae",
            "owner_id": "807649330085",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0692fc8783001c0ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "change.me-rt",
              "Owner": "change.me"
            },
            "tags_all": {
              "Name": "change.me-rt",
              "Owner": "change.me"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5217a7d6826c10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_sbn_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3ad88c9809a7cef",
            "route_table_id": "rtb-04714f07212aff4ae",
            "subnet_id": "subnet-02cca964d4eb7d9c9"
          },
          "dependencies": [
            "aws_subnet.subnet",
            "aws_vpc.vpc",
            "aws_internet_gateway.igw",
            "aws_route_table.rt"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807649330085:security-group/sg-0514aabe9539549b7",
            "description": "Allow inbound traffic via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0514aabe9539549b7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "email",
                "from_port": 143,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 143
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "email",
                "from_port": 25,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 25
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "email",
                "from_port": 993,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 993
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "email",
                "from_port": 995,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 995
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "pop3l",
                "from_port": 110,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 110
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "starttls smpt",
                "from_port": 587,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 587
              },
              {
                "cidr_blocks": [
                  "62.57.177.179/32"
                ],
                "description": "My public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "change.me-sg",
            "name_prefix": "",
            "owner_id": "807649330085",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "change.me-sg",
              "Owner": "change.me"
            },
            "tags_all": {
              "Name": "change.me-sg",
              "Owner": "change.me"
            },
            "timeouts": null,
            "vpc_id": "vpc-0df5217a7d6826c10"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807649330085:subnet/subnet-02cca964d4eb7d9c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-02cca964d4eb7d9c9",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "807649330085",
            "tags": {
              "Name": "change.me-subnet",
              "Owner": "change.me"
            },
            "tags_all": {
              "Name": "change.me-subnet",
              "Owner": "change.me"
            },
            "vpc_id": "vpc-0df5217a7d6826c10"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:807649330085:vpc/vpc-0df5217a7d6826c10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0eb45380d9a8cc43e",
            "default_route_table_id": "rtb-0a52badccc2eefa73",
            "default_security_group_id": "sg-0e80bb15626051f82",
            "dhcp_options_id": "dopt-00bae32c3f6a95f67",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0df5217a7d6826c10",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a52badccc2eefa73",
            "owner_id": "807649330085",
            "tags": {
              "Name": "change.me-vpc",
              "Owner": "change.me"
            },
            "tags_all": {
              "Name": "change.me-vpc",
              "Owner": "change.me"
            }
          }
        }
      ]
    }
  ]
}